# FunAndUsefulCPlusPlus

./: .gitignore  LICENSE  README.md
Ch02/Birthdayprob/: Birthdayprob.sln
Ch02/expx/: expx.sln
Ch02/mortgage/: mortgage.sln
Ch02/primenumber/: primenumber.sln
Ch02/triangle/: triangle.sln
Ch03/12thdayChristmas/: 12thdayChristmas.sln
Ch03/creditcard/: creditcard.sln
Ch03/juliandays/: juliandays.sln
Ch03/magicsquare/: magicsquare.sln
Ch03/meananddev/: meananddev.sln
Ch04/ISBN/: ISBN.sln
Ch05/GUIComplex/: GUIComplex.sln
Ch05/complex/: complex.sln
Ch06/PolyNew2/: PolyNew2.sln
Ch08/Animation/: Animation.sln
Ch08/Draw15Puzzles/: CppCLR_WinformsProjekt4.sln
Ch08/DrawCircles/: DrawCircles.sln
Ch08/DrawCycloid/: DrawCycloid.sln
Ch09/GUIForm2/: GUIForm2.sln
Ch09/GUIMortgage/: GUIMortgage.sln
Ch10/: README.md  analog_io.ino  delay.ino  i2c_epa.ino  i2c_epb.ino  i2c_master.ino  interruption.ino  interruption_detach.ino  io.ino  io_mapped.ino  io_multi.ino  pid.ino  pwm.ino  pwm_ps.ino  serial.ino  spi.ino  spi_ep.ino  timer.ino
Ch11/: Dockerfile  deployment.md  run_docker.bat
Ch12/: Dockerfile  Dockerfile.opencv  README.md  run_docker.bat  setup_opencv.bat
Ch12/src/pixel/: CMakeLists.txt  main.cpp
Ch13/: MidiProcessing.cpp  README.md  WavProcessing.cpp
Ch15/: README.md  Security.cpp
Example/: Example.sln
Example/Example/: Example.vcxproj  Example.vcxproj.filters  Source.cpp
GUIComplex/GUIComplex/: GUIComplex.vcxproj
MoveButtons/: MoveButtons.sln
MoveButtons/MoveButtons/: Form1.h  (+2 more)
drawCycloidNew/: drawCycloidNew.sln
(+362 files in other folders)
